--- a/projects/youtubeSearch/package.json
+++ b/projects/youtubeSearch/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "youtube",
+  "name": "yt-search",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
-    "lodash": "^4.17.4",
+    "babel-polyfill": "^6.26.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "youtube-api-search": "^0.0.5",
     "youtube-search": "^1.0.10"
